# SM64AP-Launcher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
flatpak/: file.desktop  io.github.n00byking.sm64ap-launcher.yml  io.github.n00byking.sm64ap_launcher.yml  logs.txt  metainfo.xml  out
inc/: BuildConfigurator.h  BuildManager.h  ConfigManager.h  LogManager.h  LogWindow.h  MainWindow.h  OutputWidget.h  PlatformRunner.h  RequirementHandler.h  version.h.in
presets/: apply_patches.sh  compile_build.sh  repo_dl.sh  reset_repo.sh  run_game.sh
res/: SM64APLauncher.desktop  io.github.n00byking.sm64ap-launcher.yml  metainfo.xml
src/: BuildConfigurator.cpp  BuildManager.cpp  ConfigManager.cpp  LogManager.cpp  LogWindow.cpp  MainWindow.cpp  OutputWidget.cpp  PlatformRunner.cpp  RequirementHandler.cpp  main.cpp
